[package]
name = "cargo_test"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35"
glium = { version = "0.35", default-features = false, features = ["glutin_backend"] }
glutin = "0.32"
glutin-winit = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
imgui = "0.12"
imgui-glium-renderer = "0.13"
imgui-winit-support = "0.13"
raw-window-handle = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
winit = "0.30"
